remove inherited number formats, related fdo#60215

Change-Id: I23d5e1b3baeb1499ada1fba1665027bdbe3fbb87